--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,18 +1,14 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.github.shinichy.intelliintegrant</id>
-    <name>intelli-integrant</name>
+    <name>Intelli Integrant</name>
     <vendor>shinichy</vendor>
 
     <depends>com.intellij.modules.platform</depends>
+    <depends>com.cursiveclojure.cursive</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <applicationService serviceImplementation="com.github.shinichy.intelliintegrant.services.MyApplicationService"/>
-        <projectService serviceImplementation="com.github.shinichy.intelliintegrant.services.MyProjectService"/>
+        <codeInsight.lineMarkerProvider language="Clojure"
+                                        implementationClass="com.github.shinichy.intelliintegrant.providers.ComponentLineMarkerProvider"/>
     </extensions>
-
-    <applicationListeners>
-        <listener class="com.github.shinichy.intelliintegrant.listeners.MyProjectManagerListener"
-                  topic="com.intellij.openapi.project.ProjectManagerListener"/>
-    </applicationListeners>
 </idea-plugin>
