Update plugin metadata

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,8 +1,8 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.github.shinichy.intelliintegrant</id>
-    <name>Intelli Integrant</name>
-    <vendor>shinichy</vendor>
+    <name>Integrant</name>
+    <vendor>Shinichi Katayama</vendor>
 
     <depends>com.intellij.modules.platform</depends>
     <depends>com.cursiveclojure.cursive</depends>
