--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # IntelliJ Platform Artifacts Repositories
 # -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.shinichy.intelliintegrant
+pluginGroup = com.github.shinichy.integrant
 pluginName = Integrant
 pluginVersion = 0.0.1
 
