--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,10 @@ pluginVersion = 0.0.1
 pluginSinceBuild = 203
 pluginUntilBuild = 212.*
 
+# Plugin Verifier integration -> https://github.com/JetBrains/gradle-intellij-plugin#plugin-verifier-dsl
+# See https://jb.gg/intellij-platform-builds-list for available build versions.
+pluginVerifierIdeVersions = 2020.3.4, 2021.1.3, 2021.2.3
+
 # IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
 platformType = IC
 platformVersion = 2020.3.4
