--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,7 @@ pluginVerifierIdeVersions = 2020.3.4, 2021.1.3, 2021.2.3
 # IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
 platformType = IC
 platformVersion = 2020.3.4
+platformDownloadSources = true
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
